--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<script src="https://kit.fontawesome.com/347214cdeb.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+
+	<!-- tailwind css -->
+	<!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
 
 	<title>Svelte app</title>
 
@@ -15,4 +21,5 @@
 
 <body>
 </body>
+
 </html>
